--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Basketball Stars | 3kh0</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        #content {
+            /* Add styles for the game content container */
+            max-width: 100%; /* Adjust as needed */
+            text-align: center; /* Center the content horizontally */
+        }
+    </style>
+</head>
+<body>
+    <div id="content">
+        <!-- Game content will be loaded here -->
+    </div>
+
+    <!DOCTYPE html>
+<html lang="en">
     <head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-98DP5VKS42"></script>
         <script>
@@ -89,3 +118,9 @@
         <script type="text/javascript" src="assets/basketball_legends_2019.min.js"></script>
     </body>
 </html>
+
+
+    <!-- Your remaining HTML and JavaScript code goes here -->
+</body>
+</html>
+
